fix(styles/commandline): fix hard to read documentation text colour

--- a/src/toolkit/themes/shared/glide-commandline.css
+++ b/src/toolkit/themes/shared/glide-commandline.css
@@ -231,7 +231,6 @@ xul|glide-commandline input:focus {
 
 .ExcmdCompletionOption td.documentation {
   width: 100%;
-  color: #a0aec0;
 }
 
 .SettingsCompletionOption td.title {
